examples/v1alpha2/cross-namespace-routing/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: shared-gateway
  namespace: infra-ns
spec:
  gatewayClassName: shared-gateway-class
  listeners:
  - name: http
    hostname: "foo.example.com"
    protocol: HTTP
    port: 80
    routes:
      namespaces:
        from: "All"
      kinds:
      - kind: HTTPRoute
